--- a/views/index.pug
+++ b/views/index.pug
@@ -1,8 +1,36 @@
 extends layout
 
+block head
+  link(rel='stylesheet', href='/css/chessboard-0.3.0.min.css')
+
 block content
   h1= title
   p Welcome to #{title}
-  ul(id='message')
+  div(id='board' style="width: 600px")
+  p Status:
+    span(id="status")
+  p FEN:
+    span(id="fen")
+  p PGN:
+    span(id="pgn")
+  ul(id='messages')
   form(action="")
     input(type="text" id='m' autocomplete='off')
+    button Send
+  script(src="/socket.io/socket.io.js")
+  script(src="https://code.jquery.com/jquery-1.11.1.js")
+  script(src="/js/chessboard-0.3.0.min.js")
+  script(src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.2/chess.js")
+  script(src="/js/game.js")
+  script.
+    $(function () {
+            var socket = io();
+            $('form').submit(function(){
+                socket.emit('chat message', $('#m').val());
+                $('#m').val('');
+                return false;
+            });
+            socket.on('chat message', function(msg){
+                $('#messages').append($('<li>').text(msg));
+            });
+        });
