--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 body {
-  padding: 50px;
+  padding: 5px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
@@ -7,7 +7,7 @@ a {
   color: #00B7FF;
 }
 
-form { padding: 3px; position: fixed; bottom: 0; width: 100%; }
+form { padding: 3px; position: fixed; bottom: 0; right: 0; width: 100%; }
 #messages { list-style-type: none; margin: 0; padding: 0; }
 #messages li { padding: 5px 10px; }
 #messages li:nth-child(odd) { background: #eee; }
